feat(rpc) get outbound gas payment
